--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "homepage": "https://github.com/RyanEmslie/treehouse_unit8_exceeds#readme",
   "dependencies": {
-    "gulp": "^3.9.1",
     "gulp-cli": "^2.0.1"
   },
   "devDependencies": {
+    "browser-sync": "^2.26.3",
     "del": "^3.0.0",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.6.1",
     "gulp-imagemin": "^5.0.3",
