--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/RyanEmslie/treehouse_unit8_exceeds#readme",
   "dependencies": {
-    "gulp-cli": "^2.0.1"
+    "gulp-cli": "^2.0.1",
+    "npm-check-updates": "^2.15.0"
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
